<resources>
    <string name="app_name">RestroMobile</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="dine_in">Dine in</string>
    <string name="take_away">Take away</string>
    <string name="orders">Orders</string>
    <string name="invoice">Invoice</string>

<!--    Category-->
    <string name="seafood">Seafood</string>
    <string name="noodle">Noodle</string>
    <string name="soup">Soup</string>
    <string name="drink">Drink</string>
    <string name="rice">Rice</string>
    <string name="salad">Salad</string>
    <string name="chicken">Chicken</string>
    <string name="fish">fish</string>

    <string name="save">Save</string>
    <string name="_10">10</string>
    <string name="name">Name</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="order">Order</string>
    <string name="_11">11</string>
    <string name="total">Total :</string>
    <string name="invoice_no">Invoice No</string>
    <string name="table">Table</string>
    <string name="date">Date</string>
    <string name="item_name">Item Name</string>
    <string name="status">Status</string>
    <string name="floor">Floor</string>
</resources>
