<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:padding="5dp"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">
                <TextView
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/tv_invoice_no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/invoice_no"/>
                <TextView
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/tv_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/date"/>
                <TextView
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/tv_table_no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/table"/>
            </LinearLayout>
            <LinearLayout
                android:padding="5dp"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">
                <TextView
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/tv_floor_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/floor"/>
                <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical" />
                <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>
            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/tv_item_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item_name"/>
                <TextView
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/tv_item_qty"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/qty"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_gravity="center_vertical"
                            android:textColor="@color/colorBlack"
                            android:id="@+id/tv_item_price"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/price"/>
                        <TextView
                            android:layout_gravity="center_vertical"
                            android:textColor="@color/colorBlack"
                            android:id="@+id/tv_remove"
                            android:layout_width="0dp"
                            android:text="@string/status"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/order_item_list_recycler"/>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <TextView
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"/>
               <TextView
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"/>
               <TextView
                   android:textStyle="bold"
                   android:gravity="center_vertical"
                   android:layout_gravity="center_vertical"
                   android:textColor="@color/colorBlack"
                   android:layout_width="0dp"
                   android:layout_height="30dp"
                   android:layout_weight="1"
                   android:text="Total"
                   android:id="@+id/tv_Total" />
           </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorBlack"
        android:id="@+id/v2"/>
</LinearLayout>