<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        app:cardElevation="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">
            <TextView
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorBlack"
                android:id="@+id/tv_item_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/item_name"/>
            <TextView
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorBlack"
                android:id="@+id/tv_item_qty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/qty"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/colorBlack"
                        android:id="@+id/tv_item_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/price"/>
                    <TextView
                        android:textAlignment="center"
                        android:background="@drawable/wainting_btn_shape"
                        android:textColor="@color/colorWhite"
                        android:layout_gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:id="@+id/tv_status"
                        android:layout_weight="1"
                        android:backgroundTint="@color/colorPrimary"
                        />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>