<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <TextView
                style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/name"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>
            <TextView
                style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_gravity="center_vertical"
                android:text="@string/qty"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:textAlignment="center"
                style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/price"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/order_item_list_recycler"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorBlack"
                android:id="@+id/v"/>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_height="30dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"/>
                <TextView
                    style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/total"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/total_prize"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                        android:textStyle="bold"
                        android:textColor="@color/colorBlack"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="1200000"
                        android:textAlignment="viewEnd"
                        tools:ignore="NestedWeights,RtlCompat" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.5"/>
                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorBlack"
                android:id="@+id/v1"/>
            <Button
                android:layout_margin="8dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:text="@string/order"
                android:id="@+id/btn_add_order"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>