<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:orientation="horizontal">
        <TextView
            style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
            android:id="@+id/item_order_name_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/name"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"/>
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.5">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/img_remove_qty"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_remove_black"
                    android:layout_weight="0.3"/>
                <TextView
                    style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                    android:id="@+id/item_order_qty_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:layout_gravity="center_vertical"
                    android:text="@string/_11"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"/>
                <ImageView
                    android:id="@+id/img_add_qty"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_circle_black_24dp"
                    android:layout_weight="0.3"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <TextView
                   android:textAlignment="textEnd"
                   style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                   android:id="@+id/item_order_price_info"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:layout_gravity="center_vertical"
                   android:text="@string/price"
                   android:textStyle="bold"
                   android:textColor="@color/colorBlack"
                   tools:ignore="RtlCompat" />
               <ImageView
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="0.5"
                   android:id="@+id/img_remove"
                   android:src="@drawable/ic_cancel_black_24dp"/>
           </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>