<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/my_drawer"
    android:background="@color/colorLight"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp">

        <RelativeLayout
            android:id="@+id/ll_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <androidx.viewpager.widget.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="180dp"

                android:layout_alignParentTop="true" />

            <com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/indicator"
                android:layout_marginTop="150dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="bottom"
                android:padding="10dip"
                app:centered="true"
                app:fillColor="#df0623"
                app:snap="false" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"
                android:layout_below="@+id/pager"
                android:id="@+id/v"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_below="@+id/ll_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp">
                    <LinearLayout
                        android:id="@+id/ll_dine_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_food"
                            android:layout_margin="10dp"
                            android:layout_gravity="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dine_in"
                            android:textSize="12sp"
                            android:textAllCaps="true"
                            android:textColor="@color/colorWhite"
                            android:layout_gravity="center"
                            android:layout_marginBottom="10dp"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    android:layout_marginLeft="20dp"
                    app:cardElevation="3dp">
                    <LinearLayout
                        android:id="@+id/ll_carryout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_takeaway"
                            android:layout_margin="10dp"
                            android:layout_gravity="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/take_away"
                            android:textSize="12sp"
                            android:textAllCaps="true"
                            android:textColor="@color/colorWhite"
                            android:layout_gravity="center"
                            android:layout_marginBottom="10dp"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp">
                    <LinearLayout
                        android:id="@+id/ll_order"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_order"
                            android:layout_margin="10dp"
                            android:layout_gravity="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/orders"
                            android:textSize="12sp"
                            android:textAllCaps="true"
                            android:textColor="@color/colorWhite"
                            android:layout_gravity="center"
                            android:layout_marginBottom="10dp"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    android:layout_marginLeft="20dp"
                    app:cardElevation="3dp">
                    <LinearLayout
                        android:id="@+id/ll_invoice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_bill"
                            android:layout_margin="10dp"
                            android:layout_gravity="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/invoice"
                            android:textSize="12sp"
                            android:textAllCaps="true"
                            android:textColor="@color/colorWhite"
                            android:layout_gravity="center"
                            android:layout_marginBottom="10dp"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:id="@+id/mynav"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>

